# pesquisa_acoes

./: .gitignore  main.py  pyproject.toml  tickers.csv
src/pesquisa_acoes/: main.py
src/pesquisa_acoes/services/: clients.py  scrap.py
src/pesquisa_acoes/utils/: escreve_csv.py
