[project]
name = "pesquisa-acoes"
version = "0.1.0"
description = ""
authors = [
    {name = "Rogerio Campos",email = "rogerio.campos07@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selenium (>=4.34.2,<5.0.0)"
]

[tool.poetry]
packages = [{include = "pesquisa_acoes", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
