[project]
name = "pesquisa-acoes"
version = "0.1.0"
description = ""
authors = [
    {name = "Rogerio Campos",email = "rogerio.campos07@gmail.com"}
]
readme = "README.md"
requires-python = ">3.13,<4.0"
dependencies = [
    "selenium (>=4.34.2,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
]

[tool.poetry]
packages = [{include = "pesquisa_acoes", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"

[tool.ruff]
line-length = 88
target-version = "py311"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
